# Netflix-web-project

./: .gitignore  README.md  docker-compose.yml
EX3/: .gitignore  README.md  app.js  dockerfile  package.json
EX3/EX2-main/: .gitignore
EX3/EX2-main/client/: Dockerfile  client.py
EX3/EX2-main/src/: AddCommand.cpp  AddCommand.h  AreAllArgumentNumbersValidator.cpp  AreAllArgumentNumbersValidator.h  CMakeLists.txt  CheckIfTheMovieExistsInMoviesValidator.cpp  CheckIfTheMovieExistsInMoviesValidator.h  CheckIfTheMovieExistsInUserMoviesValidator.cpp  CheckIfTheMovieExistsInUserMoviesValidator.h  CheckIfTheUserExistsValidator.cpp  CheckIfTheUserExistsValidator.h  CheckNoArgumentsValidator.cpp  CheckNoArgumentsValidator.h  CheckTwoArgumentsValidator.cpp  CheckTwoArgumentsValidator.h  ConsoleInput.cpp  ConsoleInput.h  ConsoleInputParser.cpp  ConsoleInputParser.h  ConsoleOutput.cpp  ConsoleOutput.h  DeleteCommand.cpp  DeleteCommand.h  Dockerfile  FileLoader.cpp  FileLoader.h  FileSaver.cpp  FileSaver.h  GetCommand.cpp  GetCommand.h  HelpCommand.cpp  HelpCommand.h  ICommand.h  IInput.h  IInputParser.h  ILoader.h  IOutput.h  ISaver.h  IValidator.h  IsMovieNotExistsInUserMoviesValidator.cpp  (+14 more)
EX3/EX2-main/src/Tests/: CMakeLists.txt  Dockerfile  test.cpp
EX3/controllers/: category.js  movie.js  user.js
EX3/middlewares/: authMiddleware.js
EX3/migrations/: Dockerfile  migrate.js
EX3/models/: category.js  counter.js  movie.js  user.js
EX3/routes/: category.js  movie.js  token.js  user.js
EX3/services/: auth.js  category.js  counter.js  movie.js  user.js
my-app/: Dockerfile  nginx.conf  package-lock.json  package.json
my-app/src/: App.js  index.css  index.js
my-app/src/components/: AdminAllCategories.css  AdminAllCategories.js  AdminCategoryById.js  AdminCreateCategory.css  AdminCreateCategory.js  AdminCreateMovie.css  AdminCreateMovie.js  AdminDeleteCategory.css  AdminDeleteCategory.js  AdminDeleteMovie.css  AdminDeleteMovie.js  AdminMovieById.js  AdminUpdateCategory.css  AdminUpdateCategory.js  AdminUpdateMovie.css  AdminUpdateMovie.js  CategoryCard.css  CategoryCard.js  ImageUpload.css  ImageUpload.js  MainMenu.css  MainMenu.js  (+2 more)
wiki/: env_setup.md
wiki/Androaid/: AdminScreen.md  CategoriesScreen .md  HomeScreenForOfflineUsers.md  LoginScreen.md  MainScreen.md  MovieInformationScreen .md  MovieManagement.md  RegisterScreen.md  SearchScreen.md  UserRegistrationandLoginProcess.md  VideoPlayerScreen .md
wiki/Web/: AdminScreen.md  CategoriesScreen.md  HomeScreenForOfflineUsers.md  LoginScreen.md  MainScreen.md  MovieInformationScreen.md  MovieManagement.md  RegisterScreen.md  SearchScreen.md  UserRegistrationandLoginProcess.md  VideoPlayerScreen.md
(+26 files in other folders)
